# nanoAgent

./: .gitignore  README.md  agent.py  agent_context.py  agent_factory.py  agent_log.json  agent_logger.py  agent_loop.py  agent_profile.py  background_manager.py  client.py  config.py  create_agent.py  events.py  example.txt  log.py  main.py  message_bus.py  pyproject.toml  skill.py  sub_agent.py  t.py  task_manager.py  team_state.py  todo_manager.py  tool.py  tool_bash.py  tool_calls.py  tool_compact.py  tool_edit_file.py  tool_members.py  tool_message_bus.py  tool_read_file.py  tool_skill.py  tool_spawn.py  tool_sub_agent_task.py  tool_write_file.py  utils.py  搞笑职场笑话.md
.team/: config.json
.team/inbox/: wangzai.jsonl
cmd/: main.py  main_agent.py  user_input.py
tools/: tool_bash.py  tool_compact.py  tool_edit_file.py  tool_message_bus.py  tool_read_file.py  tool_skill.py  tool_spawn.py  tool_sub_agent_task.py  tool_write_file.py
